remove old app, rendering index with main layout wired up

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,4 @@
 <h1>I want my mtg - index.hbs!!!!!!!!!!</h1>
-<table class="card-set">
-    {{#each cards}}
-        <tr class="card-set-card">
-            {{!-- <td class="card-set-card-owned">{{}}</td> --}}
-            <td class="card-set-card-number">{{this.number}}</td>
-            <td class="card-set-card-name">{{this.name}}</td>
-            <td class="card-set-card-mana-cost">{{this.manaCost}}</td>
-            <td class="card-set-card-rarity">{{this.rarity}}</td>
-        </tr>
-    {{/each}}
-</table>
+<div>
+    {{ message }}
+</div>
