--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
-<h1>I want my mtg - index.hbs!!!!!!!!!!</h1>
+<h1>PAGE: index.hbs</h1>
 <div>
+    <p>Message injected below:</p>
     {{ message }}
 </div>
