render setlist on home page; render card list for sets

--- a/views/cardSet.hbs
+++ b/views/cardSet.hbs
@@ -1,5 +1,5 @@
 <table class="card-set">
-    {{#each card}}
+    {{#each cards}}
         <tr class="card-set-card">
             {{!-- <td class="card-set-card-owned">{{}}</td> --}}
             <td class="card-set-card-number">{{this.number}}</td>
