--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,7 +1,7 @@
 <nav>
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Sets</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/sets">Sets</a></li>
         <li><a href="#">Collection</a></li>
         <li><a href="#">Profile</a></li>
         <li><a href="#">Settings</a></li>
