--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,7 @@
     <ul>
         {{#each setList}}
             <li class="set-name">
+                <i class="ss ss-{{this.keyruneCode}} ss-fw"></i>
                 <a href="sets/{{this.code}}">{{this.name}}</a>
             </li>
         {{/each}}
