cardset to setCards

--- a/views/partials/setCards.hbs
+++ b/views/partials/setCards.hbs
@@ -1,4 +1,4 @@
-<table id="card-set">
+<table id="set-cards">
     <thead>
         <th># Owned</th>
         <th>Card No.</th>
@@ -15,7 +15,8 @@
             </td>
             <td class="card-set-card-number">{{this.number}}</td>
             <td class="card-set-card-name">
-                <!-- TODO: need to map id to create the thumbnail URL >> https://cards.scryfall.io/{{img.type}}/{{img.face}}/{{img.dir1}}/{{img.dir2}}/{{scryfallId}}.jpg-->
+                <!-- TODO: need to map id to create the thumbnail URL >> 
+                https://cards.scryfall.io/{{img.type}}/{{img.face}}/{{img.dir1}}/{{img.dir2}}/{{scryfallId}}.jpg-->
                 {{!-- TODO: add link --}}
                 <a class="card-set-card-link" href="">{{this.name}}</a>
             </td>
