cards owned partial tpl

--- a/views/card.hbs
+++ b/views/card.hbs
@@ -42,7 +42,7 @@
 
 <div id="collection-info">
     <div>
-        <input type="number" value="{{this.totalOwned}}" />
+        {{>cardsOwned}}
     </div>
     <div id="card-other-printings">
         <h4 id="card-other-printings-title">Other Printings</h4>
