collection hbs tpl first draft

--- a/views/cardPrintings.hbs
+++ b/views/cardPrintings.hbs
@@ -9,13 +9,13 @@
         <tbody>
             {{#each this.metadata}}
             <tr>
-                <td class="metadata-key">this.key</td>
-                <td class="metadata-value">this.value</td>
+                <td class="metadata-key">{{this.key}}</td>
+                <td class="metadata-value">{{this.value}}</td>
             </tr>
             {{/each}}
         </tbody>
     </table>
-    <p class="card-oracle-text">this.oracleText</p>
+    <p class="card-oracle-text">{{this.oracleText}}</p>
 </div>
 <table id="all-printings-card-listing">
     <tbody>
