all hbs tpls - first draft complete

--- a/views/card.hbs
+++ b/views/card.hbs
@@ -14,7 +14,7 @@
 <div id="play-info">
     <h4>
         <span>{{this.name}}</span>
-        <span>{{this.manaCost}}</span>
+        <span>{{>manaCost}}</span>
     </h4>
     <h5>Oracle Text</h5>
     <p class="card-type">{{this.type}}</p>
