--- a/views/cardPrintings.hbs
+++ b/views/cardPrintings.hbs
@@ -1,8 +1,8 @@
 {{!-- all instances of a single card --}}
 <div id="card-identity">
     <h2>
-        <span id="card-mana-cost">{{ this.manaCost }}</span>
-        <span id="card-name">{{ this.name }}</span>
+        <span id="card-mana-cost">{{>manaCost}}</span>
+        <span id="card-name">{{this.name}}</span>
         <span> - All Printings</span>
     </h2>
     <table id="card-printings-metadata">
