--- a/views/partials/setCards.hbs
+++ b/views/partials/setCards.hbs
@@ -16,17 +16,15 @@
             <td class="card-set-card-number">{{this.number}}</td>
             <td class="card-set-card-name">
                 <!-- TODO: need to map id to create the thumbnail URL >> 
+                TODO: consider: hover and show image OR show thumbnail?
                 https://cards.scryfall.io/{{img.type}}/{{img.face}}/{{img.dir1}}/{{img.dir2}}/{{scryfallId}}.jpg-->
-                {{!-- TODO: add link --}}
-                <a class="card-set-card-link" href="">{{this.name}}</a>
+                <a class="card-set-card-link" href="{{this.url}}">{{this.name}}</a>
             </td>
             <td class="card-set-card-mana-cost">
-                {{!-- <i class="ms ms-1 ms-cost ms-shadow"></i> --}}
-                {{this.manaCost}}
+                {{>manaCost}}
             </td>
             <td class="card-set-card-rarity">{{this.rarity}}</td>
-            <!-- TODO: replace 0 with actual card price data -->
-            <td class="card-set-card-price">0</td>
+            <td class="card-set-card-price">{{this.price}}</td>
         </tr>
     {{/each}}
     </tbody>
