set controller spec tpl rendering tests

--- a/views/partials/setCards.hbs
+++ b/views/partials/setCards.hbs
@@ -24,7 +24,7 @@
                 {{>manaCost}}
             </td>
             <td class="card-set-card-rarity">{{this.rarity}}</td>
-            <td class="card-set-card-price">{{this.price}}</td>
+            <td class="card-set-card-price">${{this.price}}</td>
         </tr>
     {{/each}}
     </tbody>
