keyruneCode from set in collection hbs

--- a/views/collection.hbs
+++ b/views/collection.hbs
@@ -36,7 +36,7 @@
                 <td>{{>cardsOwned}}</td>
                 <td><a href="{{this.url}}">{{this.name}}</a></td>
                 <td>
-                    <i class="ss ss-{{this.keyruneCode}} ss-fw"></i>
+                    <i class="ss ss-{{this.set.keyruneCode}} ss-fw"></i>
                     <a href="{{this.set.url}}">{{this.set.name}}</a>
                 </td>
                 <td>{{this.price}}</td>
