--- a/src/adapters/http/views/collection.hbs
+++ b/src/adapters/http/views/collection.hbs
@@ -1,25 +1,25 @@
-<div id="user-collection">
-    <h3 id="user-collection-heading">{{this.user.name}}'s Collection</h3>
-    <section id="user-collection-metadata">
-        <div id="user-collection-value" class="user-collection-metadata-item">
-            <p class="user-collection-metadata-heading">Value</p>
-            <p class="user-collection-metadata-data">{{this.value}}</p>
+<div id="user-inventory">
+    <h3 id="user-inventory-heading">{{this.user.name}}'s Inventory</h3>
+    <section id="user-inventory-metadata">
+        <div id="user-inventory-value" class="user-inventory-metadata-item">
+            <p class="user-inventory-metadata-heading">Value</p>
+            <p class="user-inventory-metadata-data">{{this.value}}</p>
         </div>
-        {{!-- <div id="user-collection-cost" class="user-collection-metadata-item">
-            <p class="user-collection-metadata-heading">Cost</p>
-            <p class="user-collection-metadata-data">{{this.cost}}</p>
+        {{!-- <div id="user-inventory-cost" class="user-inventory-metadata-item">
+            <p class="user-inventory-metadata-heading">Cost</p>
+            <p class="user-inventory-metadata-data">{{this.cost}}</p>
         </div> --}}
-        <div id="user-collection-quantity" class="user-collection-metadata-item">
-            <p class="user-collection-metadata-heading">Quantity</p>
-            <p class="user-collection-metadata-data">{{this.quantity}}</p>
+        <div id="user-inventory-quantity" class="user-inventory-metadata-item">
+            <p class="user-inventory-metadata-heading">Quantity</p>
+            <p class="user-inventory-metadata-data">{{this.quantity}}</p>
         </div>
-        {{!-- <div id="user-collection-gain" class="user-collection-metadata-item">
-            <p class="user-collection-metadata-heading">Gain(%)</p>
-            <p class="user-collection-metadata-data">{{this.gain}}</p>
+        {{!-- <div id="user-inventory-gain" class="user-inventory-metadata-item">
+            <p class="user-inventory-metadata-heading">Gain(%)</p>
+            <p class="user-inventory-metadata-data">{{this.gain}}</p>
         </div> --}}
     </section>
 
-    <table id="user-collection-cards">
+    <table id="user-inventory-cards">
         <thead>
             <tr>
                 <th>Owned</th>
