--- a/src/adapters/http/views/partials/navbar.hbs
+++ b/src/adapters/http/views/partials/navbar.hbs
@@ -2,7 +2,7 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/sets">Sets</a></li>
-        <li><a href="#">Collection</a></li>
+        <li><a href="#">Inventory</a></li>
         <li><a href="#">Profile</a></li>
         <li><a href="#">Settings</a></li>
     </ul>
