--- a/test/http/views/card.hbs
+++ b/test/http/views/card.hbs
@@ -40,7 +40,7 @@
 
 <div id="price-info"><!-- TODO: fill in with price info --></div>
 
-<div id="collection-info">
+<div id="inventory-info">
     <div>
         {{>cardsOwned}}
     </div>
