--- a/src/adapters/http/views/user.hbs
+++ b/src/adapters/http/views/user.hbs
@@ -1,6 +1,6 @@
 <div id="user-settings">
     <h3 id="page-title">User Settings</h3>
-    <form action="/user/update" method="POST">
+    <form id="user-update-form">
         <label for="user-name">User Name</label>
         <input id="user-name" type="text" name="name" value="{{this.name}}" />
         <label for="user-email">Email</label>
@@ -8,5 +8,26 @@
         <input id="user-id" type="hidden" name="id" value="{{this.id}}" />
         <button id="button-submit" type="submit">Submit</button>
     </form>
-
+    <script>
+        // TODO: make generic and move out for all templates to use
+        document.getElementById('user-update-form').addEventListener('submit', async (event) => {
+            event.preventDefault();
+            const formData = new FormData(event.target);
+            const data = Object.fromEntries(formData.entries());
+            data.id = parseInt(data.id, 10);
+            console.log(`data.id = ${data.id}`);
+            const response = await fetch('/user/update', {
+                method: 'PATCH',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(data),
+            });
+            if (response.ok) {
+                console.log('User updated successfully');
+            } else {
+                console.error('Failed to update user');
+            }
+        });
+    </script>
 </div>
