user controller, templates MVP1

--- a/src/adapters/http/views/partials/navbar.hbs
+++ b/src/adapters/http/views/partials/navbar.hbs
@@ -2,8 +2,8 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/sets">Sets</a></li>
-        <li><a href="#">Inventory</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Settings</a></li>
+        <li><a href="#">My Inventory</a></li>
+        <li><a href="#">My Account</a></li>
+        <li><a href="/user/create">Create Account</a></li>
     </ul>
 </nav>
