--- a/src/adapters/http/views/user.hbs
+++ b/src/adapters/http/views/user.hbs
@@ -1,24 +1,24 @@
 <div id="user-settings-container">
     <h3 id="page-title">User Settings</h3>
+
+    <p id="response-message">{{ message }}</p>
+
     <form id="user-update-form">
         <label for="user-name">User Name</label>
-        <input id="user-name" type="text" name="name" value="{{this.name}}" />
+        <input id="user-name" type="text" name="name" value="{{ user.name }}" />
         <label for="user-email">Email</label>
-        <input id="user-email" type="email" name="email" value="{{this.email}}" />
-        <input id="user-id" type="hidden" name="id" value="{{this.id}}" />
-        <button id="submit-button" type="submit">Submit</button>
+        <input id="user-email" type="email" name="email" value="{{ user.email }}" />
+        <input id="user-id" type="hidden" name="id" value="{{ user.id }}" />
+        <button id="update-user-btn" type="submit">Submit</button>
     </form>
-    <h4>Delete User Account</h4>
-    <form id="user-delete-form">
-        <label for="user-name">User Name</label>
-        <input id="user-name" type="text" name="name" value="{{this.name}}" />
-        <label for="user-email">Email</label>
-        <input id="user-email" type="email" name="email" value="{{this.email}}" />
-        <input id="user-id" type="hidden" name="id" value="{{this.id}}" />
-        <button id="delete-button" type="submit">Delete User</button>
-    </form>
+
+    <h3>Delete User Account</h3>
+    <button id="delete-user-btn" type="submit">Delete User</button>
+
     <script>
+        const messageEl = document.getElementById('response-message');
         // TODO: make generic and move out for all templates to use
+        // UPDATE
         document.getElementById('user-update-form').addEventListener('submit', async (event) => {
             event.preventDefault();
             const formData = new FormData(event.target);
@@ -33,23 +33,31 @@
                 body: JSON.stringify(data),
             });
             if (response.ok) {
-                console.log('User updated successfully');
+                messageEl.textContent = 'User updated successfully';
             } else {
-                console.error('Failed to update user');
+                messageEl.textContent = 'Failed to update user';
             }
         });
 
-        document.getElementById('user-delete-form').addEventListener('submit', async (event) => {
-            event.preventDefault();
-            const formData = new FormData(event.target);
-            const data = Object.fromEntries(formData.entries());
-            const response = await fetch('/user/delete/', {
+        // DELETE
+        document.getElementById('delete-user-btn').addEventListener('click', async () => {
+            const userId = document.getElementById('user-id').value;
+            // TODO: update url?
+            const response = await fetch(`/user/${userId}`, {
                 method: 'DELETE',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(data),
             });
+            if (response.ok) {
+                const result = await response.json();
+                console.log(`RESULT: ${JSON.stringify(result)}`);
+                console.log(`RESULT: ${JSON.stringify(result).message}`);
+                console.log(`RESULT: ${result.message}`);
+                messageEl.textContent = result.message;
+                // window.location.replace('/'); // Redirect after successful delete
+            } else {
+                // TODO: can we use the result message?
+                messageEl.textContent = 'Failed to delete user';
+            }
         });
     </script>
+
 </div>
