--- a/src/adapters/http/views/user.hbs
+++ b/src/adapters/http/views/user.hbs
@@ -8,6 +8,8 @@
         <input id="user-name" type="text" name="name" value="{{ user.name }}" />
         <label for="user-email">Email</label>
         <input id="user-email" type="email" name="email" value="{{ user.email }}" />
+        <label for="user-password">Password</label>
+        <input id="user-password" type="password" name="password">
         <input id="user-id" type="hidden" name="id" value="{{ user.id }}" />
         <button id="update-user-btn" type="submit">Submit</button>
     </form>
