--- a/src/adapters/http/views/login.hbs
+++ b/src/adapters/http/views/login.hbs
@@ -3,7 +3,7 @@
 
     <p id="response-message">{{ message }}</p>
 
-    <form id="login-form">
+    <form id="login-form" method="post">
         <label for="user-email">Email</label>
         <input id="user-email" type="email" name="email" />
         <label for="user-password">Password</label>
