--- a/src/adapters/http/views/user.hbs
+++ b/src/adapters/http/views/user.hbs
@@ -18,6 +18,8 @@
     <button id="delete-user-btn" type="submit">Delete User</button>
 
     <script>
+        const accessToken = response.access_token;
+        console.log(`accessToken:${accessToken}`);// TODO: remove
         const messageEl = document.getElementById('response-message');
         // TODO: make generic and move out for all templates to use
         // UPDATE
@@ -30,6 +32,7 @@
             const response = await fetch('/user/update', {
                 method: 'PATCH',
                 headers: {
+                    'Authorization': `Bearer ${accessToken}`,
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify(data),
@@ -46,6 +49,9 @@
             const userId = document.getElementById('user-id').value;
             const response = await fetch(`/user/${userId}`, {
                 method: 'DELETE',
+                headers: {
+                    'Authorization': `Bearer ${accessToken}`,
+                }
             });
             if (response.ok) {
                 const result = await response.json();
