--- a/test/http/views/create-user.hbs
+++ b/test/http/views/create-user.hbs
@@ -2,9 +2,11 @@
     <h3 id="page-title">Create User Account</h3>
     <form id="create-user-form" action="/user/create" method="post">
         <label for="user-name">User Name</label>
-        <input id="user-name" type="text" name="name" />
+        <input id="user-name" type="text" name="name">
         <label for="user-email">Email</label>
-        <input id="user-email" type="email" name="email" />
+        <input id="user-email" type="email" name="email">
+        <label for="user-password">Password</label>
+        <input id="user-password" type="password" name="password">
         <button id="submit-button" type="submit">Submit</button>
     </form>
 </div>
