--- a/test/http/views/user.hbs
+++ b/test/http/views/user.hbs
@@ -8,6 +8,8 @@
         <input id="user-name" type="text" name="name" value="{{ user.name }}" />
         <label for="user-email">Email</label>
         <input id="user-email" type="email" name="email" value="{{ user.email }}" />
+        <label for="user-password">Password</label>
+        <input id="user-password" type="password" name="password">
         <input id="user-id" type="hidden" name="id" value="{{ user.id }}" />
         <button id="update-user-btn" type="submit">Submit</button>
     </form>
@@ -16,6 +18,8 @@
     <button id="delete-user-btn" type="submit">Delete User</button>
 
     <script>
+        const accessToken = response.access_token;
+        console.log(`accessToken:${accessToken}`);// TODO: remove
         const messageEl = document.getElementById('response-message');
         // TODO: make generic and move out for all templates to use
         // UPDATE
@@ -42,17 +46,12 @@
         // DELETE
         document.getElementById('delete-user-btn').addEventListener('click', async () => {
             const userId = document.getElementById('user-id').value;
-            // TODO: update url?
             const response = await fetch(`/user/${userId}`, {
                 method: 'DELETE',
             });
             if (response.ok) {
                 const result = await response.json();
-                console.log(`RESULT: ${JSON.stringify(result)}`);
-                console.log(`RESULT: ${JSON.stringify(result).message}`);
-                console.log(`RESULT: ${result.message}`);
                 messageEl.textContent = result.message;
-                // window.location.replace('/'); // Redirect after successful delete
             } else {
                 // TODO: can we use the result message?
                 messageEl.textContent = 'Failed to delete user';
