--- a/src/adapters/http/views/user.hbs
+++ b/src/adapters/http/views/user.hbs
@@ -18,6 +18,8 @@
     <button id="delete-user-btn" type="submit">Delete User</button>
 
     <script>
+        const accessToken = response.access_token;
+        console.log(`accessToken:${accessToken}`);// TODO: remove
         const messageEl = document.getElementById('response-message');
         // TODO: make generic and move out for all templates to use
         // UPDATE
