button updates in db with errs - WIP

--- a/src/adapters/http/views/partials/cardsOwned.hbs
+++ b/src/adapters/http/views/partials/cardsOwned.hbs
@@ -3,6 +3,7 @@
   <input type="number" 
     name="quantity-owned" 
     class="quantity-owned" 
-    value="{{#if this.quantity}}{{this.quantity}}{{else}}0{{/if}}" />
+    value="{{#if this.quantity}}{{this.quantity}}{{else}}0{{/if}}"
+    data-id="{{this.card.id}}" />
   <button type="button" class="decrement-quantity">-</button>
 </form>
