--- a/test/http/views/partials/cardsOwned.hbs
+++ b/test/http/views/partials/cardsOwned.hbs
@@ -1,30 +1,9 @@
-<span class="quantity-owned-controller">
-  <button class="remove-card-btn" id="remove-card-{{this.id}}">
-    <span class="minus">-</span>
-  </button>
-  <span class="quantity-owned">{{#if this.quantity}}{{this.quantity}}{{else}}0{{/if}}</span>
-  <button class="add-card-btn" id="add-card-{{this.id}}">
-    <span class="plus">+</span>
-  </button>
-</span>
-{{!-- TODO: buttons for foil or list as entirely different card? --}}
-<script type="text/javascript">
-  document.addEventListener('DOMContentLoaded', function() {
-    const removeCardBtn = document.querySelector('.remove-card-btn');
-    const addCardBtn = document.querySelector('.add-card-btn');
-    const quantityOwned = document.querySelector('.quantity-owned');
-    removeCardBtn.addEventListener('click', function() {
-      let quantity = parseInt(quantityOwned.textContent);
-      if (quantity > 0) {
-        quantity--;
-        quantityOwned.textContent = quantity;
-      }
-    });
-
-    addCardBtn.addEventListener('click', function() {
-      let quantity = parseInt(quantityOwned.textContent);
-      quantity++;
-      quantityOwned.textContent = quantity;
-    });
-  });
-</script>
+<form class="quantity-form" data-item-id="{{this.card.id}}">
+  <button type="button" class="increment-quantity">+</button>
+  <input type="number" 
+    name="quantity-owned" 
+    class="quantity-owned" 
+    value="{{#if this.quantity}}{{this.quantity}}{{else}}0{{/if}}"
+    data-id="{{this.card.id}}" />
+  <button type="button" class="decrement-quantity">-</button>
+</form>
