--- a/test/http/views/user.hbs
+++ b/test/http/views/user.hbs
@@ -8,6 +8,7 @@
         <input id="user-email" type="email" name="email" value="{{ user.email }}" />
         <label for="user-password">Password</label>
         <input id="user-password" type="password" name="password">
+{{!-- TODO: probably shouldn't pass the user id this way, but extract from request/resposne  --}}
         <input id="user-id" type="hidden" name="id" value="{{ user.id }}" />
         <button id="update-user-btn" type="submit">Submit</button>
     </form>
@@ -16,8 +17,6 @@
     <button id="delete-user-btn" type="submit">Delete User</button>
 
     <script>
-        const accessToken = response.access_token;
-        console.log(`accessToken:${accessToken}`);// TODO: remove
         const messageEl = document.getElementById('response-message');
         // TODO: make generic and move out for all templates to use
         // UPDATE
@@ -27,18 +26,13 @@
             const data = Object.fromEntries(formData.entries());
             data.id = parseInt(data.id, 10);
             console.log(`data.id = ${data.id}`);
-            const response = await fetch('/user/update', {
+            const response = await fetch('/user', {
                 method: 'PATCH',
                 headers: {
                     'Content-Type': 'application/json',
                 },
-                body: JSON.stringify(data),
+                body: data,
             });
-            if (response.ok) {
-                messageEl.textContent = 'User updated successfully';
-            } else {
-                messageEl.textContent = 'Failed to update user';
-            }
         });
 
         // DELETE
