--- a/src/adapters/http/views/partials/setCards.hbs
+++ b/src/adapters/http/views/partials/setCards.hbs
@@ -8,7 +8,7 @@
         <th>Price</th>
     </thead>
     <tbody>
-    {{#each cards}}
+    {{#each set.set.cards}}
         <tr class="card-set-card">
             <td class="card-set-card-owned">
                 {{>cardsOwned}}
