--- a/src/adapters/http/views/ingestCards.hbs
+++ b/src/adapters/http/views/ingestCards.hbs
@@ -1,4 +1,1 @@
-<link href="//cdn.jsdelivr.net/npm/mana-font@latest/css/mana.css" rel="stylesheet" type="text/css" />
-<div>
-    {{>cardList}}
-</div>
+<div>{{>cardList}}</div>
