--- a/src/adapters/http/views/partials/setInfo.hbs
+++ b/src/adapters/http/views/partials/setInfo.hbs
@@ -1,11 +1,11 @@
 <div id="set-info">
     <h2 id="set-header">
-        <i class="ss ss-{{this.keyruneCode}} ss-2x"></i>
-        <span id="set-name">{{this.name}}</span>
+        <i class="ss ss-{{set.keyruneCode}} ss-2x"></i>
+        <span id="set-name">{{set.name}}</span>
     </h2>
     <ul id="set-metadata">
-        <li id="set-metadata-block">Block: {{this.block}}</li>
-        <li id="set-metadata-code">Code: {{this.code}}</li>
-        <li id="set-metadata-release-date">Release Date: {{this.releaseDate}}</li>
+        <li id="set-metadata-block">Block: {{set.block}}</li>
+        <li id="set-metadata-code">Code: {{set.code}}</li>
+        <li id="set-metadata-release-date">Release Date: {{set.releaseDate}}</li>
     </ul>
 </div>
