--- a/src/adapters/http/views/set.hbs
+++ b/src/adapters/http/views/set.hbs
@@ -1,7 +1,2 @@
-<link href="//cdn.jsdelivr.net/npm/mana-font@latest/css/mana.css" rel="stylesheet" type="text/css" />
-<div>
-    {{>setInfo}}
-</div>
-<div>
-    {{>setCards}}
-</div>
+<div>{{>setInfo}}</div>
+<div>{{>setCards}}</div>
