--- a/test/http/views/partials/manaCost.hbs
+++ b/test/http/views/partials/manaCost.hbs
@@ -1,5 +1,6 @@
+<link href="//cdn.jsdelivr.net/npm/mana-font@latest/css/mana.css" rel="stylesheet" type="text/css" />
 <span class="mana-cost">
-    {{#each this.manaCost}}
-    <i class="ms ms-cost ms-shadow ms-{{this}}"></i>
+    {{#each card.manaCost}}
+        <i class="ms ms-cost ms-shadow ms-{{this}}"></i>
     {{/each}}
 </span>
