--- a/src/adapters/http/views/partials/setCards.hbs
+++ b/src/adapters/http/views/partials/setCards.hbs
@@ -11,7 +11,7 @@
     {{#each set.cards}}
         <tr class="card-set-card">
             <td class="card-set-card-owned">
-                {{>cardsOwned card=this inventory=@root.inventory}}
+                {{>cardsOwned card=this}}
             </td>
             <td class="card-set-card-number">{{this.number}}</td>
             <td class="card-set-card-name">
